#flow: Login
#intent:
# Open up our app and use the default credentials to login
# and navigate to the demo screen

appId: com.pizzaapp # the app id of the app we want to test
# You can find the appId of an Ignite app in the `app.json` file
# as the "package" under the "android" section and "bundleIdentifier" under the "ios" section
---
- clearState # clears the state of our app (navigation and authentication)
- launchApp # launches the app

- assertVisible: "PizzaApp"
- tapOn:
    text: "PizzaApp"

- assertVisible: "Sign In"
- tapOn:
    text: "Tap to sign in!"
- tapOn:
    text: "Continue"
- assertVisible: "Your app, almost ready for launch!"
- tapOn:
    text: "Let's go!"
- assertVisible: "Components to jump start your project!"

